--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Smart Farming System 🌱</title>
+  <title>Welcome to Smart Farming System 🌱</title>
   <style>
     /* Reset */
     * {
